Change image links to local paths

--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
     </section>
     <section id="forYourInfo">
       <figure class="halfsplit">
-        <img   src="https://content.
-                    cademy.com/courses/Semantic%20HTML/statue-of-liberty.jpeg" alt="The Statue of Liberty">
+        <img src="./media/images/statue-of-liberty.jpeg">
         <figcaption>
           <p class="figcaptionContent">This is the Statue of Liberty, a popular tourist attraction located on Ellis
           Island.</p></figcaption>
@@ -85,7 +84,7 @@
         <p>While the view in the city is beautiful, the sounds are not as lovely. Below you'll see an example of the
           view and the sounds you'll deal with in NYC on a daily basis.</p>
       </article>
-        <embed class="thirdsplit" src="https://content.codecademy.com/courses/Semantic%20HTML/nyc-skyline.jpeg">
+        <embed class="thirdsplit" src="./media/images/nyc-skyline.jpeg">
       <video class="thirdsplit" controls autoplay
         src="https://content.codecademy.com/courses/Semantic%20HTML/nyc-skyline-timelapse.mp4">Video cannot be
         displayed</video>
