Correct embed and audio links to local paths

--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
       </article>
         <embed class="thirdsplit" src="./media/images/nyc-skyline.jpeg">
       <video class="thirdsplit" controls autoplay
-        src="https://content.codecademy.com/courses/Semantic%20HTML/nyc-skyline-timelapse.mp4">Video cannot be
+        src="./media/nyc-skyline-timelapse.mp4">Video cannot be
         displayed</video>
       <div class="thirdsplit" >
       <audio controls
-        src="https://content.codecademy.com/courses/Semantic%20HTML/nyc-sounds.mov"></audio>
+        src="./media/nyc-sounds.mov"></audio>
       </div>
 
     </section>
